Added executable for conversion to parity automata, removed makefile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,4 @@ add_executable(oslh ${SOURCE_FILES} OmegaSemigroupLandweberHierarchy.cpp)
 add_executable(os2w ${SOURCE_FILES} OmegaSemigroupToWeakBuechi.cpp)
 add_executable(os2c ${SOURCE_FILES} OmegaSemigroupToCoBuechi.cpp)
 add_executable(os2d ${SOURCE_FILES} OmegaSemigroupToDetBuechi.cpp)
+add_executable(os2p ${SOURCE_FILES} OmegaSemigroupToDetBuechi.cpp)
