--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ add_executable(os2w OmegaSemigroupToWeakBuechi.cpp)
 add_executable(os2c OmegaSemigroupToCoBuechi.cpp)
 add_executable(os2d OmegaSemigroupToDetBuechi.cpp)
 add_executable(os2p OmegaSemigroupToParity.cpp)
+add_executable(rdos ReduceOmegaSemigroup.cpp)
 
 target_link_libraries(a2os OmAlgLib)
 target_link_libraries(oslh OmAlgLib)
@@ -55,3 +56,4 @@ target_link_libraries(os2w OmAlgLib)
 target_link_libraries(os2c OmAlgLib)
 target_link_libraries(os2d OmAlgLib)
 target_link_libraries(os2p OmAlgLib)
+target_link_libraries(rdos OmAlgLib)
